--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,7 +11,11 @@ body {
     box-sizing: border-box;
 }
 
-h3 {
+.comment {
+    color: #bab6b6;
+}
+
+h1, h3, h2 {
     color: #e5e5e5;
 }
 
@@ -52,6 +56,7 @@ a {
     display: flex;
     flex-direction: column;
     padding-top: 24px;
+    color: #fff;
 }
 
 .column form input[type="text"],
@@ -80,13 +85,17 @@ a {
     padding: 20px 0;
 }
 
+.h1 {
+    color: #fff;
+}
+
 .column h3 {
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
     margin: 0;
     padding-top: 16px;
-    color: #000;
+    color: #fff;
 }
 
 .column .header span {
